--- a/style/header.css
+++ b/style/header.css
@@ -1,9 +1,8 @@
-@import url('./reset.css');
 @font-face {font-family:'NanumGothic';src: url('../font/NanumFontSetup_OTF_GOTHIC/NanumGothic.otf');}
 
 #headerWrapper {
-    width: 100%;;
-    height: 2rem;
+    width: 100%;
+    height: 5%;
     background-color: rgb(117, 117, 117);
 }
 
@@ -14,9 +13,10 @@
     justify-content: space-between;
     align-items: center;
 }
+
 #title {
-    width: 15rem;
-    height: 2rem;
+    width: 20%;
+    height: 100%;
     background-color: aqua;
     display: flex;
     justify-content: center;
@@ -26,10 +26,9 @@
 
 
 #controlWrapper {
-    width: 380px;
+    width: 80%;
     height: 100%;
 }
-
 
 #search {
     width: 300px;
@@ -51,4 +50,23 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+
+#navigation {
+    width: 80%;
+    height: 100%;
+    background-color: aquamarine;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#navigation > .navList {
+    width: 20%;
+    height: 100%;
+    text-align: center;
+    align-self: center;
+    background-color: black;
 }
