--- a/App.css
+++ b/App.css
@@ -1,19 +1,4 @@
-@import url('./style/reset.css');
-
-body, html {
-  width: 100%;
-  height: 100%;
-  background-color: #001219;
-}
-
-#appWrapper {
-  width: 100%;
-  height: 100%;
-}
-.flex {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-}
+#root {
+    min-height: 48rem;
+    min-width: 27rem;
+  }
