--- a/index.css
+++ b/index.css
@@ -1,5 +1,14 @@
+@import url('./style/reset.css');
+
+html {
+  font-size: 100%;
+}
+html, body,#root {
+  width: 100%;
+  height: 100%;
+}
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
