--- a/style/main.css
+++ b/style/main.css
@@ -1,74 +1,112 @@
 @font-face {
     font-family: 'NanumGothic';
     src: url('../font/NanumFontSetup_OTF_GOTHIC/NanumGothic.otf');
-    
 }
-/*레이아웃 쉽게 보기 위한거*/
+
+/*레이아웃 외각선*/
 .border {
-    border: 1px solid white;
+    border: 1px solid #ffffff;
 }
 /****************/
-#wrpMain {
+
+#wrpContent {
     width: 100%;
-    height: 90%;
-    text-align: center;
-}
-.bgImg {
-    background : linear-gradient(#000000, #ffffff);
-}
-#wrpMain > * {
-    color:white;
-}
-.font {
-    font-family: 'NanumGothic' !important;
+    background-color: gray;
 }
 
-.flex {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+#main_title,#main_season {
+    width: 50%;
+    height: 5rem;
 }
-.flexRow {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.grid {
-    display:grid;
-    justify-items: center;
-    align-items: center;
-    grid-template-columns: repeat(5,1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0;
-    grid-row-gap: 0;
-}
-#wrpModifier {
-    width: 20%;
-    height: 30%;
 
-    display:flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+#main_title {
+    grid-area: 1/1/2/1;
 }
-#wrpReward {
-    width: 20%;
-    height: 10%;
+
+#main_season {
+    grid-area: 1/2/1/3;
+}
+
+#main_blog {
+    width: 80%;
+    height: 100%;
+    grid-area: 2/1/4/3;
     
     display:flex;
-    flex-wrap:nowrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+/* 아티클 테스트 */
+#test {
+    width: 80%;
+    height: 30%;
+}
+#main_wrapper {
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(3,1fr);
+}
+#main_wrapper > * {
+    color:white;
+    font-size: 120%;
+}
+section > span {
+    display: inline-block;
+}
+#main_reward {
+    width: 66rem;
+    height: 10rem;
     flex-direction: row;
     justify-content: space-evenly;
+}
+
+
+#main_modifier {
+    grid-area: 1/2/4/3;
+    width: 80%;
+    flex-direction: row;
+    justify-content: center;
+}
+.main_font {
+    font-size: 100%;
+}
+
+.main_grid {
+    display:grid;
+    justify-items: center;
+    justify-content: space-between;
     align-items: center;
 }
 
-.ic {
-    width: 2rem;
-    height: 2rem;
-    border-radius: 50%;
+.main_flex {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.main_article {
+    width: 100%;
+    height: 10rem;
+
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+}
+
+.main_img {
+    width: 16rem;
+    height: 9rem;
+    background-color: black;
+    margin-right: 2rem;
+}
+
+.main_icon {
+    width: 4rem;
+    height: 4rem;
+}
+
+.modifiers {
+    width: 10rem;
+    height: 4rem;
 }
